# airflow

./: .gitignore  README.md  ipython_kernel_config.py  jupyter_server_config.py  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: devcontainer.json
dags/: first_dag.py
dwdrun_infra/: start_all_services.bash  start_all_services.sh  stop_all_services.sh
dwdrun_infra/airflow_infra_config/: docker-compose.yaml
dwdrun_infra/airflow_infra_config/config/: config.hcl
dwdrun_infra/airflow_infra_config/dags/: config_dag_builder.py  constants.py  simple.py
dwdrun_infra/docker_runtime/: Dockerfile  build_infra.sh  dwd_run.sh  requirements.txt
dwdrun_infra/docker_runtime/tests/: test_dwd_run.sh
dwdrun_infra/dwdrun_infra_config/: docker-compose.yaml
dwdrun_infra/mongo_setup/: create_db_users.py
infra/: start_all_services.bash
infra/docker_runtime/: Dockerfile  build_infra.sh  dwd_run.sh
infra/docker_runtime/tests/: test_docker_creation.sh
kubernetes/: pv.yaml  pvc.yml  values.yaml  variables.yaml
micap_infra/: README.md  start_all_services.sh  stop_all_services.sh
micap_infra/environment_runtime/: Dockerfile  Dockerfile_terminal  Dockerfile_terminal.dockerignore  build_infra.sh  micap_run.sh
micap_infra/environment_runtime/tests/: test_dwd_run.sh  test_micap_run.sh
micap_infra/environment_services/: .env  docker-compose.yaml
micap_infra/environment_services/kafka_connect/: Dockerfile  questdb-sink-btc.json
micap_infra/environment_setup/vault/: setup_vault.py
python_codebase/: release_codebase.py  run_mongo_locally.py
python_codebase/dwdrun/: dynamic_import_lib.py  runner.py
python_codebase/dwdrun/tests/: test_runner.py  test_runner_run.py
python_codebase/examples/crewai/: scrape_website.py
python_codebase/lib/asana/: example_1.py
python_codebase/lib/docs/: constants.py  functions.py  models.py
python_codebase/lib/ofx/: models.py
source/: release_codebase.py  run_mongo_locally.py  template.py
source/micap_runtime/: dynamic_import_lib.py  runner.py  sitecustomize.py
(+78 files in other folders)
