[project]
name = "mi-capital"
version = "0.1.0"
description = "MI Capital Project"
authors = [{ name = "Dave Dawson" }]
requires-python = "3.13.2"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2", 
    "pytz>=2024.1",
    "pymongo>=4.6.1",
    "hvac>=2.1.0",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "contourpy>=1.2.0",
    "cycler>=0.12.1",
    "fonttools>=4.49.0",
    "kiwisolver>=1.4.5",
    "pillow>=10.2.0",
    "pyparsing>=3.1.1",
    "scipy>=1.12.0",
    "sdmx1 (>=2.21.1,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.ai]
optional = true

[tool.poetry.group.ai.dependencies]
crewai = { version = ">=0.19.0", python = ">=3.9,<3.13" }
langchain = { version = ">=0.1.9", python = ">=3.9,<3.13" }
openai = { version = ">=1.12.0", python = ">=3.9,<3.13" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
